# JCB_use_case

./: .gitignore  evaluation.py  evaluation_1.py  evaluation_2.py  evaluation_3.py  evaluation_final.py  evaluation_hardcoded.py  final_ui.py  normalize_json.py  parser_final.py  pyproject.toml  requirements.txt
data/ground_truth/: invoice_10_P.json  invoice_1_H.json  invoice_2_H.json  invoice_3_H.json  invoice_4_H.json  invoice_5_H.json  invoice_6_H.json  invoice_7_H.json  invoice_8_H.json  invoice_9_P.json
data/json/doc_AI/: invoice_10_P.json  invoice_1_H.json  invoice_2_H.json  invoice_3_H.json  invoice_4_H.json  invoice_5_H.json  invoice_6_H.json  invoice_7_H.json  invoice_8_H.json  invoice_9_P.json
data/json/layoutlm/: invoice_10_P.json  invoice_1_H.json  invoice_2_H.json  invoice_3_H.json  invoice_4_H.json  invoice_5_H.json  invoice_6_H.json  invoice_7_H.json  invoice_8_H.json  invoice_9_P.json
data/json/textract/: invoice_10_P.json  invoice_1_H.json  invoice_2_H.json  invoice_3_H.json  invoice_4_H.json  invoice_5_H.json  invoice_6_H.json  invoice_7_H.json  invoice_8_H.json  invoice_9_P.json
data/normalized_preds/doc_AI/: invoice_10_P.json  invoice_1_H.json  invoice_2_H.json  invoice_3_H.json  invoice_4_H.json  invoice_5_H.json  invoice_6_H.json  invoice_7_H.json  (+2 more)
data/txt_files/: invoice_10_P.txt  invoice_1_H.txt  invoice_2_H.txt  invoice_3_H.txt  invoice_4_H.txt  invoice_5_H.txt  invoice_6_H.txt  invoice_7_H.txt  invoice_8_H.txt  invoice_9_P.txt
parsers/: donut.py  layoutlm.py  layoutlm_paddleocr.py  layoutlm_tesseract.py  llm.py  receipt_parser.py
(+19 files in other folders)
